--- a/Amir/Quiz_Screen/QuizzzMiniProj/Quizz.css
+++ b/Amir/Quiz_Screen/QuizzzMiniProj/Quizz.css
@@ -1,122 +1,120 @@
 h1 {
-    font-family: 'Century', serif;
-    text-align: center;
+  font-family: "Century", serif;
+  text-align: center;
 }
 ul {
-    list-style: none;
+  list-style: none;
 }
 li {
-    font-family:'Century', serif;
-    font-size: 1.5em;
+  font-family: "Century", serif;
+  font-size: 1.5em;
 }
-input[type=radio] {
-    border: 0px;
-    width: 20px;
-    height: 2em;
+input[type="radio"] {
+  border: 0px;
+  width: 20px;
+  height: 2em;
 }
 p {
-    font-family: 'Century', serif;
-    
+  font-family: "Century", serif;
 }
 /* Quiz Classes */
- .quizContainer {
-    background-color: white;
-    border-radius: 6px;
-    width: 75%;
-    margin: auto;
-    padding-top: 5px;
-    /*-moz-box-shadow: 10px 10px 5px #888;
+.quizContainer {
+  background-color: white;
+  border-radius: 6px;
+  width: 75%;
+  margin: auto;
+  padding-top: 5px;
+  /*-moz-box-shadow: 10px 10px 5px #888;
     -webkit-box-shadow: 10px 10px 5px #888;
     box-shadow: 10px 10px 5px #888;*/
-    position: relative;
+  position: relative;
 }
-.quizcontainer #quiz1
-{
-text-shadow:1px 1px 2px grey;
-font-family: 'Century', Arial, sans-serif;
+.quizcontainer #quiz1 {
+  text-shadow: 1px 1px 2px grey;
+  font-family: "Century", Arial, sans-serif;
 }
 .nextButton {
-    box-shadow: 3px 3px 5px #888;
-    border-radius: 6px;
-   /* width: 150px;*/
-    height: 40px;
-    text-align: center;
-    background-color: lightgrey;
-    /*clear: both;*/
-    color: black;
-    font-family: 'Century', serif;
-    position: relative;
-    margin: auto;
-	font-size:25px;
-	font-weight:bold;
-    padding-top: 5px;
-	float:right;
-	right:10%;
+  box-shadow: 3px 3px 5px #888;
+  border-radius: 6px;
+  /* width: 150px;*/
+  height: 40px;
+  text-align: center;
+  background-color: lightgrey;
+  /*clear: both;*/
+  color: black;
+  font-family: "Century", serif;
+  position: relative;
+  margin: auto;
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 5px;
+  float: right;
+  right: 10%;
 }
 
 .preButton {
-    box-shadow: 3px 3px 5px #888;
-    border-radius: 6px;
-    /*width: 150px;*/
-    height: 40px;
-    text-align: center;
-    background-color: lightgrey;
-    /*clear: both;*/
-    color: black;
-    font-family:'Century', serif;
-    position: relative;
-    margin: auto;
-	font-size:25px;
-	font-weight:bold;
-    padding-top: 5px;
-	float:left;
-	left:10%;
+  box-shadow: 3px 3px 5px #888;
+  border-radius: 6px;
+  /*width: 150px;*/
+  height: 40px;
+  text-align: center;
+  background-color: lightgrey;
+  /*clear: both;*/
+  color: black;
+  font-family: "Century", serif;
+  position: relative;
+  margin: auto;
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 5px;
+  float: left;
+  left: 10%;
 }
 
 .question {
-    font-family:'Century', serif;
-    font-size: 1.5em;
-	font-weight:bold;
-    width: 100%;
-    height: auto;
-    margin: auto;
-    border-radius: 6px;
-    background-color: lightgrey;
-    text-align: center;
+  font-family: "Century", serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  border-radius: 6px;
+  background-color: lightgrey;
+  text-align: center;
 }
 .quizMessage {
-    background-color: peachpuff;
-    border-radius: 6px;
-    width: 20%;
-    margin: auto;
-    text-align: center;
-    padding: 5px;
-	font-size:20px;
-	font-weight:bold;
-    font-family: 'Century', serif;
-    color: black;
-	position:absolute;
-	top:50%;
-	left:40%;
+  background-color: peachpuff;
+  border-radius: 6px;
+  width: 20%;
+  margin: auto;
+  text-align: center;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Century", serif;
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 40%;
 }
 .choiceList {
-    font-family: 'Arial', serif;
-    color: black;
-	font-size:15px;
-	font-weight:bold;
+  font-family: "Arial", serif;
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
 }
 .result {
-    width: 40%;
-    height: auto;
-    border-radius: 6px;
-    background-color: linen;
-    margin: auto;
-	color:green;
-    text-align: center;
-	font-size:25px;
-    font-family:'Verdana', serif;
-	font-weight:bold;
-	position:absolute;
-	top:80%;
-	left:30%;
+  width: 40%;
+  height: auto;
+  border-radius: 6px;
+  background-color: linen;
+  margin: auto;
+  color: green;
+  text-align: center;
+  font-size: 25px;
+  font-family: "Verdana", serif;
+  font-weight: bold;
+  position: absolute;
+  top: 80%;
+  left: 30%;
 }
