--- a/shivam/firebase_login/design_files/css/style.css
+++ b/shivam/firebase_login/design_files/css/style.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: "Poppins-Regular";
-  src: url("../fonts/poppins/Poppins-Regular.ttf"); }
-@font-face {
-  font-family: "Poppins-SemiBold";
-  src: url("../fonts/poppins/Poppins-SemiBold.ttf"); }
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
 
 body {
   font-family: "Poppins-Regular";
@@ -16,7 +6,6 @@ body {
   margin: 0; }
 
 input, textarea, select, button {
-  font-family: "Poppins-Regular";
   color: #333;
   font-size: 13px; }
 
@@ -56,6 +45,7 @@ a:hover {
     padding-top: 36px;
     padding-left: 45px;
     padding-right: 45px; }
+    
   .inner h3 {
     text-transform: uppercase;
     font-size: 25px;
@@ -87,30 +77,23 @@ a:hover {
   height: 30px;
   padding: 0;
   margin-bottom: 25px; }
+
   .form-control::-webkit-input-placeholder {
     font-size: 13px;
     color: #333;
-    font-family: "Poppins-Regular"; }
+     }
   .form-control::-moz-placeholder {
     font-size: 13px;
     color: #333;
-    font-family: "Poppins-Regular"; }
+     }
   .form-control:-ms-input-placeholder {
     font-size: 13px;
     color: #333;
-    font-family: "Poppins-Regular"; }
+  }
   .form-control:-moz-placeholder {
     font-size: 13px;
     color: #333;
-    font-family: "Poppins-Regular"; }
-
-select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-  padding-left: 20px; }
-  select option[value=""][disabled] {
-    display: none; }
+     }
 
 button {
   border: none;
@@ -126,63 +109,9 @@ button {
   background: #333;
   font-size: 15px;
   color: #fff;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s; }
-  button i {
-    margin-left: 10px;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0); }
-  button:hover i, button:focus i, button:active i {
-    -webkit-animation-name: hvr-icon-wobble-horizontal;
-    animation-name: hvr-icon-wobble-horizontal;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1; }
+  vertical-align: middle
+}
 
-@-webkit-keyframes hvr-icon-wobble-horizontal {
-  16.65% {
-    -webkit-transform: translateX(6px);
-    transform: translateX(6px); }
-  33.3% {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px); }
-  49.95% {
-    -webkit-transform: translateX(4px);
-    transform: translateX(4px); }
-  66.6% {
-    -webkit-transform: translateX(-2px);
-    transform: translateX(-2px); }
-  83.25% {
-    -webkit-transform: translateX(1px);
-    transform: translateX(1px); }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
-@keyframes hvr-icon-wobble-horizontal {
-  16.65% {
-    -webkit-transform: translateX(6px);
-    transform: translateX(6px); }
-  33.3% {
-    -webkit-transform: translateX(-5px);
-    transform: translateX(-5px); }
-  49.95% {
-    -webkit-transform: translateX(4px);
-    transform: translateX(4px); }
-  66.6% {
-    -webkit-transform: translateX(-2px);
-    transform: translateX(-2px); }
-  83.25% {
-    -webkit-transform: translateX(1px);
-    transform: translateX(1px); }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
 @media (max-width: 1199px) {
   .wrapper {
     background-position: right center; } }
@@ -201,6 +130,6 @@ button {
       padding: 40px 0 30px; }
 
   button {
-    margin-top: 60px; } }
-
+    margin-top: 60px; } 
+  }
 /*# sourceMappingURL=style.css.map */
