--- a/Quiz_App/css/LandingPage.css
+++ b/Quiz_App/css/LandingPage.css
@@ -14,21 +14,26 @@ body{
   color:black;
   text-decoration: none;
   font-size: 17px;
-
 }
-
 .navbar a:hover {
   background-color:lightslategrey;
 } */
 /* -----------------------------------------Jumbotron - paragraph------------------------------------------ */
 
+.bg-light-slateGray{
+  background-color:#cdd0cb;
+}
+.bg-light-slateGray li:hover{
+  background-color: #7f817e;
+}
 .jumbotron{
   margin-top:1%;
+  padding: 3%;
  } 
  .badge{
-  padding-left: 6%;
-  padding-right: 6%;
+  padding-left:0 6% 0 6%;
   height: 10%;
+  margin-top: none;
 }
 
 p{
@@ -51,15 +56,12 @@ p{
 /* -----------------------------------------------row 2 logos------------------------------------- */
 .row-two{
   text-align: center;
-  padding-left: 30%;
-  
+  padding-left: 30%; 
 }
-
 .logos img{
 border-radius: 50px;
 padding-top: 40px;
 }
-
 .hovereffect {
   width:100%;
   height:100%;
@@ -79,7 +81,7 @@ padding-top: 40px;
   top:0;
   left:0;
   opacity:0;
-  background-color:rgba(0,0,0,0.5);
+  /* background-color:rgba(0,0,0,0.5); */
   -webkit-transition:all .4s ease-in-out;
   transition:all .4s ease-in-out
   }
@@ -133,7 +135,7 @@ padding-top: 40px;
   
   .hovereffect:hover .overlay {
   opacity:1;
-  filter:alpha(opacity=100);
+  /* filter:alpha(opacity=100); */
   }
   
   .hovereffect:hover h2,.hovereffect:hover a.info {
@@ -149,23 +151,12 @@ padding-top: 40px;
   transition-delay:.2s;
   }
 
- 
-
 
 /* ----------------------------------------------media tags----------------------------------------- */
-
 
 @media all and (min-width: 400px) and (max-width: 800px){
   .navbar a {
     float: none;
     display: block;
   }
-  /* .jumbotron{
-    height: 500px;
-  } */
-  /* .mainlogo img{
-    height: 200px;
-    width: 200px;
-
-  } */
 }
