--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,11 @@
 body{
-  background: linear-gradient(#4B79A1,#283E51);
+  background-image: url("/src/images/back.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
   margin: 2%;
-  width: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 .jumbotron{
@@ -11,6 +15,7 @@ body{
   padding-left: 6%;
   padding-right: 6%;
   height: 10%;
+  padding-top: 1px;
 }
 
 p{
@@ -20,9 +25,26 @@ p{
 .lead{
   padding-top: 3px;
 }
+/* --------------------------navbar links header link and logo--------------------- */
+
+.gotlogo{
+  height: 250%;
+  width:50%;
+}
+button{
+  border-radius:20px;
+  text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-right: 4px;
+  margin-left: 4px;
+}
 
 /* ----------------------------------------jumbotron-quiz logo------------------------------------------------------- */
+.jumbotron{
+   margin-top: 5%;
+  background-color: white;
 
+}
 .mainlogo img{
   padding-top: 40px;
  height: 100%;
@@ -45,7 +67,6 @@ padding-top: 40px;
 .hovereffect {
   width:100%;
   height:100%;
-  float:left;
   overflow:hidden;
   position:relative;
   text-align:center;
