--- a/src/css/admin_add_questions.css
+++ b/src/css/admin_add_questions.css
@@ -1,34 +1,44 @@
-#questions {
+body {
+  font-family: Arial;
+  font-size: 100%;
+
+}
+
+.container {
+  margin-top: 5%;
+  background-color: #f2f2f2;
+  padding: 3%;
+  border: 2% solid lightgrey;
+  border-radius: 1%;
+}
+
+.questions {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  border:1px white;
   width: 100%;
 }
 
-#questions td,
-#questions th {
-  border: 1px solid #ddd;
-  padding: 8px;
+.questions td,
+.questions th {
+  border: 2px solid black;
+
 }
 
-#questions tr:nth-child(even) {
+.questions tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-#questions tr:hover {
+.questions tr:hover {
   background-color: #ddd;
 }
 
-#questions th {
+.questions th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
   background-color: #4caf50;
   color: white;
-}
-body {
-  font-family: Arial;
-  font-size: 17px;
-  padding: 8px;
 }
 
 * {
@@ -36,25 +46,25 @@ body {
 }
 
 .row {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox; 
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap; 
   flex-wrap: wrap;
   margin: 0 -16px;
 }
 
 .col-25 {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
+  -ms-flex: 25%; 
 }
 
 .col-50 {
-  -ms-flex: 50%; /* IE10 */
+  -ms-flex: 50%;
   flex: 50%;
+ 
 }
 
 .col-75 {
-  -ms-flex: 75%; /* IE10 */
+  -ms-flex: 75%;
   flex: 75%;
 }
 
@@ -64,35 +74,29 @@ body {
   padding: 0 16px;
 }
 
-.container {
-  background-color: #f2f2f2;
-  padding: 5px 20px 15px 20px;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
-}
 
 input[type="text"] {
   width: 100%;
-  margin-bottom: 20px;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  margin-bottom: 2%;
+  padding: 1%;
+  border: 1% solid #ccc;
+  border-radius: 2%;
 }
 
 label {
-  margin-bottom: 10px;
+  margin-bottom:10px;
   display: block;
 }
 
 .icon-container {
-  margin-bottom: 20px;
-  padding: 7px 0;
-  font-size: 24px;
+  margin-bottom: 20%;
+  padding: 7% 0;
+  font-size: 24%;
 }
 
 .btn {
-  background-color: #4caf50;
-  color: white;
+  background-color: rgb(97, 191, 219);
+  color: black;
   padding: 12px;
   margin: 10px 0;
   border: none;
@@ -103,7 +107,7 @@ label {
 }
 
 .btn:hover {
-  background-color: #45a049;
+  background-color: #22547c;
 }
 
 a {
@@ -117,4 +121,7 @@ hr {
 span.price {
   float: right;
   color: grey;
+}
+table{
+  margin-top:5%;
 }
