--- a/src/css/admin_dashboard.css
+++ b/src/css/admin_dashboard.css
@@ -1,16 +1,10 @@
-html{
-
-    
-}
-
-
 body{
     height: 100%;
 }
 
-.container {
-    width: 900px;
-    height: 800px;
+.container-fluid{
+    width: 100%;
+    height: 100%;
     background-color: white;
 
     margin-top: 5%;
@@ -25,11 +19,29 @@ header{
     text-emphasis: bold;
    
 }
+nav{
+    /*background-color: #bdbdbd;*/
+    margin-top: 5%;
+    height: 100%;
+    float: left;
+    width: 15%;
+    margin-left: 1%;
+}
+.nav-item{
+    width: 70%;
+    height: 20%;
+    margin-top: 3%;
+    margin-left: 2%;
+    padding: 5%;
+    height: 20%;
+    font-size: medium;
+    border: 10px round solid;
+    
+}
 
 
 .card {
-    width: 300px;
-  
+    width: 40%;
     padding: 3%;
     padding-top: 5%;
     margin-top: 7%;
@@ -43,37 +55,19 @@ img {
     height: 20%;
 
 }
-nav{
-    /*background-color: #bdbdbd;*/
-    margin-top: 5%;
-    height: 100%;
-    float: left;
-    width: 15%;
-    margin-left: 1%;
- 
-}
- .fa-plus-circle{
+
+.fa-plus-circle{
     font-size: 1000%;
     
 }
 .fa-plus-circle:before {
     content: "\f055";
 }
-*, ::after, ::before {
+.fa-plus-circle, ::after, ::before {
     box-sizing: border-box;
     align-items: center;
 }
-.nav-item{
-    width: 70%;
-    height: 20%;
-    margin-top: 3%;
-    margin-left: 2%;
-    padding: 5%;
-    height: 20%;
-    font-size: medium;
-    border: 10px round solid;
-    
-}
+
 
 .nav-item:hover{
     /* background-color:aquamarine ; */
@@ -91,4 +85,13 @@ nav{
 button{
     margin-right: 20px;
     margin-left: 20px;
+}
+
+.category-name{
+    color: red;
+}
+
+#category-name{
+    font-size: large;
+    font:bold;
 }
