--- a/src/css/admin_dashboard.css
+++ b/src/css/admin_dashboard.css
@@ -1,97 +1,36 @@
-body{
-    height: 100%;
+.card{
+    height: 70%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+p.card-text.text-center {
+    font-size: 100px;
+}
+.card-img-top{
+    align-self: center;
 }
 
-.container-fluid{
-    width: 100%;
-    height: 100%;
-    background-color: white;
-
-    margin-top: 5%;
-    margin-bottom: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-header{
-    margin-top:1%;
-    font-size:200%;
-    text-align: center;
-    text-emphasis: bold;
-   
-}
-nav{
-    /*background-color: #bdbdbd;*/
-    margin-top: 5%;
-    height: 100%;
-    float: left;
-    width: 15%;
-    margin-left: 1%;
-}
-.nav-item{
-    width: 70%;
-    height: 20%;
-    margin-top: 3%;
-    margin-left: 2%;
-    padding: 5%;
-    height: 20%;
-    font-size: medium;
-    border: 10px round solid;
-    
-}
-
-
-.card {
-    width: 40%;
-    padding: 3%;
-    padding-top: 5%;
-    margin-top: 7%;
-    margin-bottom: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-img {
-    width: 20%;
-    height: 20%;
-
-}
-
-.fa-plus-circle{
-    font-size: 1000%;
-    
-}
-.fa-plus-circle:before {
-    content: "\f055";
-}
-.fa-plus-circle, ::after, ::before {
-    box-sizing: border-box;
-    align-items: center;
-}
-
-
-.nav-item:hover{
-    /* background-color:aquamarine ; */
-    width: 100%;
-}
-.category-button{
-    text-align: center;
-    margin-right: auto;
-  
-}
-
-.nav_bar{
-    height: 100%;
-}
 button{
     margin-right: 20px;
     margin-left: 20px;
 }
-
 .category-name{
     color: red;
 }
-
-#category-name{
-    font-size: large;
-    font:bold;
+.badge-name{
+    color: white;
+    width: 100%;
+    background-color: rgb(92, 179, 185);
+}
+.dash-badge{
+    color: black;
+    width: 30%;
+}
+.crdbtn,.del{
+    width: 40%;
+    font-size:large;
+}
+@media all and (max-width: 770px) {
+    .badge dash-badge{
+        visibility: hidden;
+    }
 }
