--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,23 +1,34 @@
-body{
-  background-image: url("/src/images/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 2%;
-  background-repeat: no-repeat;
-  background-size: cover;
-overflow: hidden;
-}
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
-.jumbotron{
-  margin-top:1%;
- } 
- .badge{
+body{
+     margin: 0%;
+    }
+
+/* --------------------------navbar links header link and logo--------------------- */
+
+hr{
+  border: 1px solid black;
+  
+}
+/* ----------------------------------------jumbotron-quiz logo------------------------------------------------------- */
+
+
+   .row1{
+     margin-top: 1px;
+   }
+.mainlogo img{
+
+ height: 100%;
+ width: 100%;
+ padding-left:55px;
+ position: rel; 
+}
+.badge{
   padding-left: 6%;
   padding-right: 6%;
   height: 10%;
   padding-top: 1px;
 }
-
 p{
   font-family: 'Times New Roman', Times, serif, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 2px;
@@ -25,45 +36,18 @@ p{
 .lead{
   padding-top: 3px;
 }
-/* --------------------------navbar links header link and logo--------------------- */
 
-.gotlogo{
-  height: 250%;
-  width:50%;
-}
-button{
-  border-radius:20px;
-  text-decoration: none;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  margin-right: 4px;
-  margin-left: 4px;
-}
-
-/* ----------------------------------------jumbotron-quiz logo------------------------------------------------------- */
-.jumbotron{
-   margin-top: 5%;
-  background-color: white;
-
-}
-.mainlogo img{
-  padding-top: 40px;
- height: 100%;
- width: 100%;
- padding-left:55px;
- position: rel; 
-}
 /* -----------------------------------------------row 2 logos------------------------------------- */
-.row-two{
-  text-align: center;
-  padding-left: 30%;
+.row2{
+  
+ margin-top: 1px;
+ padding-top: 2px;
   
 }
 
 .logos img{
 border-radius: 50px;
-padding-top: 40px;
 }
-
 .hovereffect {
   width:100%;
   height:100%;
@@ -154,17 +138,45 @@ padding-top: 40px;
 /* ----------------------------------------------media tags----------------------------------------- */
 
 
-@media all and (min-width: 400px) and (max-width: 800px){
+@media all and (max-width: 600px){
+ 
+  .hlogo{
+    width: auto;
+    height: 50px;
+    /* display: none; */
+    }
+   .lead{
+    font-size: 10px;
+  } 
+ 
+}
+@media all and (min-width: 601px) and (max-width: 785px){
+  .navbar a {
+    
+    display: block;
+  }
+   .lead{
+    font-size: 13px;
+  } 
+  .hlogo{
+    width: auto;
+    height: 70px;
+    /* display: none; */
+    }
+
+}
+@media all and (min-width: 786px) and (max-width: 1800px){
   .navbar a {
     float: none;
     display: block;
   }
-  /* .jumbotron{
-    height: 500px;
-  } */
-  /* .mainlogo img{
-    height: 200px;
-    width: 200px;
-
-  } */
+   .lead{
+    font-size: 17px;
+  } 
+  .hlogo{
+    width: auto;
+    height: 70px;
+    /* display: none; */
+    }
+ 
 }
