--- a/src/css/quiz_home.css
+++ b/src/css/quiz_home.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  /* background-color: rgb(89, 100, 255) */
-}
 .wrapper {
   max-width: 80%;
   margin: 80px auto 50px;
@@ -12,6 +7,8 @@ body {
   position: relative;
   min-height: 400px;
   overflow: hidden;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 150%;
 }
 h4 {
   float: right;
@@ -63,8 +60,7 @@ h1 {
 
 .nextButton,
 .preButton,
-.flag,
-#submit {
+.flag {
   border: none;
   outline: none;
   cursor: pointer;
@@ -75,17 +71,26 @@ h1 {
   transition: 0.4s all;
   right: 30%;
 }
+#submit {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 15px 35px;
+  border-radius: 27px;
+  transition: 0.4s all;
+  right: 30%;
+}
 .nextButton:disabled,
 .preButton:disabled {
   background-color: black;
 }
-.flag {
+.nextButton {
   margin-left: 3%;
 }
 .preButton {
   float: left;
 }
-.nextButton {
+.flag {
   float: right;
 }
 .nextButton:hover,
@@ -95,17 +100,6 @@ h1 {
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* button {
-  
-  cursor: pointer;
-  color: white;
-  background-color: rgb(128, 129, 148);
-  padding: 15px 35px;
-  border-radius: 27px;
-  transition: 0.4s all;
-  float: left;
-  right: 50%;
-} */
 .navButton {
   border: none;
   outline: none;
@@ -120,13 +114,14 @@ h1 {
 }
 button:hover {
   color: rgb(128, 129, 148);
-
   background-color: white;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  /* background-color: white; */
+  /* box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2); */
 }
 .navButton:hover {
   color: rgb(128, 129, 148);
-  background-color: rgb(102, 109, 243);
+  background-color: rgb(167, 171, 248);
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
 }
 .quizContainer {
@@ -134,10 +129,12 @@ button:hover {
 }
 #submit {
   position: absolute;
-  right: 5%;
-  bottom: 5%;
+  right: 10%;
+  bottom: 15%;
 }
-
+.questionNav {
+  height: fit-content;
+}
 @media all and (max-width: 770px) {
   .col-sm-3 {
     visibility: hidden;
