--- a/src/css/user_dashboard.css
+++ b/src/css/user_dashboard.css
@@ -7,6 +7,22 @@ html,body{
 width:"50%";
  height:"50%";
 }
+
+.card{
+  margin: 2%;
+  width: 90%;
+}
+p.card-text.text-center {
+  font-size: 100px;
+}
+
+.card-img-top{
+  align-self: center;
+  width: auto;
+  padding: 50px;
+  height: 300px;
+  max-width: 80%;
+}
 .header{
 height: 8%; 
 background-color: lightblue;
@@ -31,30 +47,24 @@ margin-top: 0.5%;
 margin-right: 0.5%;
 max-width: 5%;
 }
-.navbar{
-  height: 100%;
-  float: left;
-  width: 15%; 
-}
+
 .nav-item{
-  width: 75%;
-  margin-top: 5%;
+  width: 100%;
   padding: 10%;
   height: 50%;
   font-size: large;
 }
-
-.nav-item:hover{
+.nav_bar{
   width: 100%;
+  /*  */
 }
 section
 {
   color: #616161;
-  width: 85%;
-  float: left;
+  width: 100%;
   height: 80%;
   overflow-y: scroll; 
- 
+  
 
 }
 .performanceBtn{
@@ -73,78 +83,6 @@ margin: 2%;
 
 .container-fluid{
   width: 100%;
-}
-
-.card{
-  margin: 5%;
-}
-
-.card-img-top{
-width: 50%;
-height: 50%;
-}
-
-/* theme */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: black;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color:gray;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px gray;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
 
 .footer {
