--- a/src/css/user_dashboard.css
+++ b/src/css/user_dashboard.css
@@ -1,14 +1,14 @@
-html,body{
+html,body {
   width: 100%;
   height: 100%;  
   overflow: hidden; 
 }
-.canvas{
+.canvas {
 width:"50%";
  height:"50%";
 }
 
-.card{
+.card {
   margin: 2%;
   width: 90%;
 }
@@ -16,31 +16,31 @@ p.card-text.text-center {
   font-size: 100px;
 }
 
-.card-img-top{
+.card-img-top {
   align-self: center;
   width: auto;
   padding: 50px;
   height: 300px;
   max-width: 80%;
 }
-.header{
+.header {
 height: 8%; 
 background-color: lightblue;
 color: black;
 width: 100%;
 text-align: center;
 }
-.dashboard{
-width: 80%;
+.dashboard {
+width: 100%;
 }
-.logo{
-padding-top: 0.5%;
+.logo {
 padding-left: 1%;
 height: 90%;
 width: 5%;
 float: left;
 }
-.logout{
+
+.logout {
 float: right;
 height: 80%;
 margin-top: 0.5%;
@@ -48,18 +48,20 @@ margin-right: 0.5%;
 max-width: 5%;
 }
 
-.nav-item{
+.nav-item {
   width: 100%;
   padding: 10%;
   height: 50%;
   font-size: large;
 }
-.nav_bar{
+.nav_bar {
   width: 100%;
   /*  */
 }
-section
-{
+.navbar {
+  width: 100%;
+}
+section {
   color: #616161;
   width: 100%;
   height: 80%;
@@ -67,21 +69,21 @@ section
   
 
 }
-.performanceBtn{
+.performanceBtn {
 height: 30%;
 width: 20%;
 margin: 2%;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 0px;
   background: transparent;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: #e0e1dd;
 }
 
-.container-fluid{
+.container-fluid {
   width: 100%;
 }
 
@@ -95,11 +97,17 @@ background-color: lightblue;
 color: white;
 text-align: center;
 }
-.logout{
+.logout {
 height: 80%;
 padding: 0.5%;
 } 
-.footer-content{
+.footer-content {
 color: black;
 margin:2%;
+}
+
+@media screen and (min-width: 1020px) {
+  .nav-item{
+   margin-left: 75%;
+  }
 }
